--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
   <img src="photo.jpg" alt="Freshers Reception">
-  <h1>🎉 Welcome Freshers 🎉</h1>
+  <h1>🌸 Welcome to Freshers Reception 2026 🌸</h1>
 
   <script>
     const duration = 30 * 1000; // 30 seconds
