--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 <body>
 
   <img src="photo.jpg" alt="Freshers Reception">
-  <h1>🌸 Welcome to Freshers Reception 2026 🌸</h1>
+  <h1 style="color: gold; font-size: 48px;">
+🎉 Welcome Freshers 🎉
+</h1>
 
   <script>
     const duration = 30 * 1000; // 30 seconds
