--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Confetti Library (Free CDN) -->
+  <!-- Effects Library -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
   <style>
@@ -13,23 +13,20 @@
       padding: 0;
       width: 100%;
       height: 100%;
-      overflow: hidden;
       background: black;
+      overflow: hidden;
     }
 
     body {
       background-image: url("photo.jpg");
-      background-size: cover;
+      background-size: contain;   /* fit image */
       background-position: center;
       background-repeat: no-repeat;
     }
 
     canvas {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      inset: 0;
       pointer-events: none;
     }
   </style>
@@ -38,21 +35,39 @@
 <body>
 
 <script>
-  // Continuous celebration effect
-  function celebrate() {
+  /* 🎉 Continuous Confetti */
+  setInterval(() => {
     confetti({
       particleCount: 6,
-      spread: 100,
-      startVelocity: 30,
+      spread: 120,
+      startVelocity: 25,
       origin: {
         x: Math.random(),
-        y: Math.random() * 0.5
+        y: Math.random() * 0.6
       }
     });
+  }, 200);
+
+  /* 🎆 Fireworks Effect */
+  function fireworks() {
+    const count = 200;
+    const defaults = { origin: { y: 0.6 } };
+
+    function fire(particleRatio, opts) {
+      confetti(Object.assign({}, defaults, opts, {
+        particleCount: Math.floor(count * particleRatio)
+      }));
+    }
+
+    fire(0.25, { spread: 26, startVelocity: 55 });
+    fire(0.2,  { spread: 60 });
+    fire(0.35, { spread: 100, decay: 0.91, scalar: 0.8 });
+    fire(0.1,  { spread: 120, startVelocity: 25, decay: 0.92 });
+    fire(0.1,  { spread: 120, startVelocity: 45 });
   }
 
-  // Run every 200ms (smooth celebration)
-  setInterval(celebrate, 200);
+  /* Fireworks every 3 seconds */
+  setInterval(fireworks, 3000);
 </script>
 
 </body>
